--- a/Obligatorio/MedicORT/www/index.html
+++ b/Obligatorio/MedicORT/www/index.html
@@ -12,6 +12,7 @@
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jtsage-datebox-jqm@4.4.1/jtsage-datebox.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhfTvXeR1_KtzXelJWoMu64w9RaZ7bmE8&callback=initMap" async defer></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script>
         $(document).ready(function(){
             $("div").html(function (i, html) {
